updated thesis description

--- a/thesis-en-master/metadata.tex
+++ b/thesis-en-master/metadata.tex
@@ -15,31 +15,31 @@
 
 % Thesis title in English (exactly as in the official assignment)
 % (Note: \xxx is a "ToDo label" which makes the unfilled visible. Remove it.)
-\def\ThesisTitle{\xxx{Thesis title}}
+\def\ThesisTitle{\xxx{Modelling Fluid-Structure Interaction using Smoothed Particle Hydrodynamics}}
 
 % Author of the thesis (you)
-\def\ThesisAuthor{\xxx{Name Surname}}
+\def\ThesisAuthor{\xxx{Michael Monček}}
 
 % Year when the thesis is submitted
-\def\YearSubmitted{\xxx{YEAR}}
+\def\YearSubmitted{\xxx{2025}}
 
 % Name of the department or institute, where the work was officially assigned
 % (according to the Organizational Structure of MFF UK in English,
 % see https://www.mff.cuni.cz/en/faculty/organizational-structure,
 % or a full name of a department outside MFF)
-\def\Department{\xxx{Name of the department}}
+\def\Department{\xxx{Mathematical Institute of Charles University}}
 
 % Is it a department (katedra), or an institute (ústav)?
-\def\DeptType{\xxx{Department}}
+\def\DeptType{\xxx{Institute}}
 
 % Thesis supervisor: name, surname and titles
-\def\Supervisor{\xxx{Supername Supersurname}}
+\def\Supervisor{\xxx{Michal Pavelka}}
 
 % Supervisor's department (again according to Organizational structure of MFF)
-\def\SupervisorsDepartment{\xxx{department}}
+\def\SupervisorsDepartment{\xxx{Mathematical Institute of Charles University}}
 
 % Study programme (does not apply to rigorosum theses)
-\def\StudyProgramme{\xxx{study programme}}
+\def\StudyProgramme{\xxx{Mathematical modelling}}
 
 % An optional dedication: you can thank whomever you wish (your supervisor,
 % consultant, who provided you with tea and pizza, etc.)
@@ -80,11 +80,11 @@ increases the probability of getting a reviewer who will like the thesis.}
 % If you are studing in a Czech programme, you also need to provide metadata in Czech:
 % (in English programmes, this is not used anywhere)
 
-\def\ThesisTitleCS{\xxx{Název práce česky}}
-\def\DepartmentCS{\xxx{Název katedry česky}}
-\def\DeptTypeCS{\xxx{Katedra}}
-\def\SupervisorsDepartmentCS{\xxx{katedra vedoucího}}
-\def\StudyProgrammeCS{\xxx{studijní program}}
+\def\ThesisTitleCS{\xxx{Modelování interakce tekutin a pevných látek pomocí Smoothed Particle Hydrodynamics}}
+\def\DepartmentCS{\xxx{Matematický ústav UK}}
+\def\DeptTypeCS{\xxx{Ústav}}
+\def\SupervisorsDepartmentCS{\xxx{Matematický ústav UK}}
+\def\StudyProgrammeCS{\xxx{Matematické momdelování}}
 
 \def\ThesisKeywordsCS{%
 \xxx{klíčová slova\sep klíčové fráze}
