--- a/thesis-en-master/macros.tex
+++ b/thesis-en-master/macros.tex
@@ -142,6 +142,71 @@
 \newcommand{\dint}{\int_0^\tau\!\!\int_0^\tau}
 \newcommand{\isqr}[1]{\frac{1}{\sqrt{#1}}}
 
+%%% Michalova makra
+\newcommand{\xx}{\mathbf{x}}
+\newcommand{\XX}{\mathbf{X}}
+\newcommand{\YY}{\mathbf{Y}}
+\newcommand{\XXX}{\mathbb{X}}
+\newcommand{\XXXX}{\boldsymbol{\mathbb{X}}}
+\newcommand{\YYYY}{\boldsymbol{\mathbb{Y}}}
+\newcommand{\diff}{\mathrm{d}}
+\newcommand{\Id}{\mathbf{I}}
+\newcommand{\Tr}{\mathrm{Tr}}
+\newcommand{\CC}{\mathbf{C}}
+\newcommand{\dX}{\mathrm{d}\XX}
+\newcommand{\dx}{\mathrm{d}\xx}
+\newcommand{\mm}{\mathbf{m}}
+\newcommand{\vv}{\mathbf{v}}
+\newcommand{\MM}{\mathbf{M}}
+\newcommand{\OBig}{\mathcal{O}}
+\newcommand{\eps}{\varepsilon}
+\newcommand{\FF}{\mathbf{F}}
+%\newcommand{\AA}{\mathbf{A}}
+\newcommand{\BB}{\mathbf{B}}
+\newcommand{\DD}{\mathbf{D}}
+\newcommand{\qq}{\mathbf{q}}
+\newcommand{\rr}{\mathbf{r}}
+\newcommand{\cc}{\mathbf{c}}
+\newcommand{\pp}{\mathbf{p}}
+\newcommand{\ww}{\mathbf{w}}
+\newcommand{\WW}{\mathbf{W}}
+\newcommand{\QQ}{\mathbf{Q}}
+\newcommand{\LL}{\mathbf{L}}
+\newcommand{\Lie}{\mathfrak{L}}
+\newcommand{\dive}{\mathrm{div}}
+\newcommand{\aalpha}{\mathbb{\alpha}}
+
+\newcommand{\MP}[1]{{\color{OliveGreen}MP:\ \ #1}}
+\newcommand{\IP}[1]{{\color{Red}IP:\ \ #1}}
+\newcommand{\MH}[1]{{\color{Red}MH:\ \ #1}}
+\newcommand{\VK}[1]{{\color{Cyan}VK:\ \ #1}}
+
+\newcommand{\sA}{{\mathsmaller A}}
+\newcommand{\sB}{{\mathsmaller B}}
+\newcommand{\sC}{{\mathsmaller C}}
+\newcommand{\sD}{{\mathsmaller D}}
+\newcommand{\sM}{{\mathsmaller M}}
+\newcommand{\sN}{{\mathsmaller N}}
+\newcommand{\sL}{{\mathsmaller L}}
+\newcommand{\sK}{{\mathsmaller K}}
+\newcommand{\sI}{{\mathsmaller I}}
+\newcommand{\sJ}{{\mathsmaller J}}
+
+\newcommand{\pd}{\partial}
+\newcommand{\F}[2]{F^{#1}_{\ \, \mathsmaller#2}}
+\newcommand{\hatF}[2]{\hat{F}^{#1}_{\ \, \mathsmaller#2}}
+\newcommand{\A}[2]{A^{\mathsmaller#1}_{\ \, #2}}
+\newcommand{\vab}[2]{v^{#1}_{\ \, #2}}
+\newcommand{\curl}{\mathrm{curl}}
+\newcommand{\Ffunc}{F}
+\newcommand{\Gfunc}{G}
+\newcommand{\Hfunc}{H}
+
+\newcommand{\LA}{\mathfrak{l}}
+\newcommand{\TRT}{\mathrm{TRT}}
+\newcommand{\Par}{\mathcal{P}}
+%\newcommand{\pr}{\mathrm{pr}~}
+
 %%% TODO items: remove before submitting :)
 \newcommand{\xxx}[1]{\textcolor{red!}{#1}}
 
