--- a/thesis-en-master/thesis.tex
+++ b/thesis-en-master/thesis.tex
@@ -128,7 +128,10 @@
 \include{preface}
 \include{chap01}
 \include{chap02}
-
+%\include{kap01}
+%\include{kap02}
+%\include{kap03}
+%\include{kap04}
 \include{epilog}
 
 %%% Bibliography
