--- a/thesis-en-master/chap01.tex
+++ b/thesis-en-master/chap01.tex
@@ -3,5 +3,64 @@
 An~example citation: \cite{Andel07}
 
 \section{Title of the first subchapter of the first chapter}
+The thesis should consist of the following steps:
+1 Review of paper [1], where an SPH method for both fluids and solids was developed.
+2 Review of the SPH method and simple numerical tests using SmoothedParticles.jl framework [2].
+3 Review of fluid-structure interaction (FSI) problems in continuum mechanics, for instance the Turek-Hron benchmark [3].
+4 An attempt to simulate an FSI problem using SPH.
 
+
+Abstract:
+Smoothed Particle Hydrodynamics (SPH for short) is lagrangian meshfree method that is advantageous 
+for simulations of fluids in domain with free boundary. The method in use is based on discretization
+of the Symmetric Hyperbolic Thermodynamically Compatible equations (SHTC), that can describe both fluids, elastic solids,
+and visco-elasto-plastic solids withing a single framework. Firstly, we review this method. Secondly, we test it on Turek-Hron benchmark and we show that
+the method is suitable for simulating FSI (fluid structure interactions) problems and shows remarkable agreement with the data.
+
+Introduction:
+Something about SPH
+Hamiltonian formulation, Brackets
+
+Smoothed Particle Hydrodynamics is a particle based lagrangian meshfree method for solving partial differential equations. 
+It is especially useful when dealing with free surfaces. SPH also conserves energy, linear and angular momentum. 
+Among the disadvantages are slower convergence rates and numerical artifacts such as particle clumping or tensile instability [cite].
+
+
+Fluid-structure interaction (FSI) describes situation where some movable or deformable object interacts with surrounding or internal fluid flow. 
+It can have stable or oscillatory nature, depending on the problem. FSI problems can be found in engineering e.g. aircraft, automobile, spacecraft or engine design,
+in civil engineering e.g. when designing bridges or huge marine structures. FSI problems also arise in biomechanics when modelling blood flow or when studying heart
+valve dynamics.
+These problems are often too complex to be solved analyticaly and it is often impossible to conduct relevant experiments. 
+If that is the case we need to analyze these problems by means of numerical simulation. Two main aproaches for FSI are being used:
+ - Partitioned approach: the governing equations for fluid and for solid are solved separately, with two distinct solvers, coupling is achieved subsequently.
+ - Monolithic approach: the governing equations for both fluid and solid are solved simultaneously, with a single solver.
+The partitioned approach often allows us to use existing software which might be advantageous. However the stability of the coupling algorithm migh be an issue. 
+Moreover working with a mesh that changes over time is often cumbersome and hard to implement if the geometry of the problem is complex.
+We turn our attention to monolithic approach specifically the Smoothed Particle Hydrodynamics (SPH) method that was developed in [1] by discretizing the unified formulation of continuum mechanics [2,3].
+The governing equations belong to the class of Symmetric Hyperbolic Thermodynamically compatible (SHTC) equations where we subsitute the concept of viscosity coefficient by the so-called
+particle rearrangement time. The continuum is interpreted as a system of of particles connected by bonds and flow is interpreted as bond destruction and rearrangement of particles. 
+This is the key idea for unified description of fluids and solids because (elastic) solids can be interpreted as fluids with infinite relaxation time.
+The aim of this paper is to expand on results achieved in paper [1] and test the method for FSI problems. First, we review article [1], the SPH method and we derive the governing equations
+from hamiltonian mechanics of continuum. We then proceed to some examples and we namely test the method for viscoplastic flows. Finally, we put the method in test on the Turek-Hron FSI benchmark.
+1. Introduction
+
+The introduction should outline the following elements:
+
+    Background: Describe the significance of fluid-structure interaction (FSI) problems in computational physics and engineering,
+    highlighting their relevance across fields such as biomechanics, aerospace, and civil engineering.
+
+    Current Challenges: Discuss the limitations of traditional approaches in simulating both fluids and solids,
+    especially in contexts where interactions between the two are critical. Explain how typical FSI models often require
+     separate formulations and interactions for fluid and solid domains.
+
+    Objective: State the purpose of your research: developing a unified framework for FSI that leverages the SHTC
+    equations for simultaneous treatment of fluid and solid mechanics within a single SPH-based model.
+
+    Contribution: Summarize the unique contribution of this study, specifically the use of the SHTC
+    equations discretized with SPH and the demonstration of the model on the Turek-Hron benchmark.
+
+
+
+Derivation and the choice of governing equations. Discretization of those equations.
+Review of the SPH method and simulation for viscous flow. 
 \section{Title of the second subchapter of the first chapter}
