--- a/thesis-en-master/chap01.tex
+++ b/thesis-en-master/chap01.tex
@@ -17,7 +17,7 @@ of the Symmetric Hyperbolic Thermodynamically Compatible equations (SHTC), that 
 and visco-elasto-plastic solids withing a single framework. Firstly, we review this method. Secondly, we test it on Turek-Hron benchmark and we show that
 the method is suitable for simulating FSI (fluid structure interactions) problems and shows remarkable agreement with the data.
 
-Introduction:
+Introduction:pr
 Something about SPH
 Hamiltonian formulation, Brackets
 
@@ -63,4 +63,6 @@ The introduction should outline the following elements:
 
 Derivation and the choice of governing equations. Discretization of those equations.
 Review of the SPH method and simulation for viscous flow. 
+$\Id$
+$\dive \pd$
 \section{Title of the second subchapter of the first chapter}
