--- a/thesis-en-master/macros.tex
+++ b/thesis-en-master/macros.tex
@@ -161,8 +161,8 @@
 \newcommand{\OBig}{\mathcal{O}}
 \newcommand{\eps}{\varepsilon}
 \newcommand{\FF}{\mathbf{F}}
-%\newcommand{\AA}{\mathbf{A}}
-\newcommand{\BB}{\mathbf{B}}
+\renewcommand{\AA}{\mathbf{A}}
+\newcommand{\BB}{\mathbb{B}}
 \newcommand{\DD}{\mathbf{D}}
 \newcommand{\qq}{\mathbf{q}}
 \newcommand{\rr}{\mathbf{r}}
