--- a/thesis-en-master/metadata.tex
+++ b/thesis-en-master/metadata.tex
@@ -49,13 +49,14 @@
 
 % Abstract (recommended length around 80-200 words; this is not a copy of your thesis assignment!)
 \def\Abstract{%
-\xxx{Use the most precise, shortest sentences that state what problem the
-thesis addresses, how it is approached, pinpoint the exact result achieved, and
-describe the applications and significance of the results. Highlight anything
-novel that was discovered or improved by the thesis. Maximum length is 200
-words, but try to fit into 120. Abstracts are often used for deciding if
-a reviewer will be suitable for the thesis; a well-written abstract thus
-increases the probability of getting a reviewer who will like the thesis.}
+\xxx{Fluid-structure interactions (FSI) describe the interplay between fluids and
+deformable structures, critical in fields like engineering and biomechanics.
+Due to their complexity, FSI problems often require numerical simulations.
+This paper adopts an approach using the Smoothed Particle Hydrodynamics (SPH) method.
+We build on prior SPH research, based on the Symmetric Hyperbolic Thermodynamically Compatible equations (SHTC),
+and validate the method
+through tests on the Turek-Hron FSI benchmark.
+}
 }
 
 % 3 to 5 keywords (recommended) separated by \sep
